infrastructure/kubernetes/event-bus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: event-bus-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: event-bus
    template:
        metadata:
            labels:
                app: event-bus
        spec:
            containers:
                - name: event-bus
                  image: codyle212/event-bus:latest
---
apiVersion: v1
kind: Service
metadata:
    name: event-bus-service
spec:
    selector:
        app: event-bus
    type: ClusterIP
    ports:
        - name: event-bus
          protocol: TCP
          port: 4005
          targetPort: 4005
