infrastructure/kubernetes/moderation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: moderation-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: moderation
    template:
        metadata:
            labels:
                app: moderation
        spec:
            containers:
                - name: moderation
                  image: codyle212/moderation:latest
---
apiVersion: v1
kind: Service
metadata:
    name: moderation-service
spec:
    selector:
        app: moderation
    type: ClusterIP
    ports:
        - name: moderation
          protocol: TCP
          port: 4003
          targetPort: 4003
