infrastructure/kubernetes/query-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: query-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: query
    template:
        metadata:
            labels:
                app: query
        spec:
            containers:
                - name: query
                  image: codyle212/query:latest
---
apiVersion: v1
kind: Service
metadata:
    name: query-service
spec:
    selector:
        app: query
    type: ClusterIP
    ports:
        - name: query
          protocol: TCP
          port: 4002
          targetPort: 4002
